[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-stack-mcp"
version = "0.1.0"
description = "The complete open-source SEO data stack for AI agents — Google Search Console, GA4, Bing Webmaster Tools and Microsoft Clarity in one MCP server, with built-in analyst tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Raffaele Nocera", email = "info@raffaelenocera.com" }]
keywords = ["mcp", "seo", "google-search-console", "ga4", "bing-webmaster", "clarity", "claude", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "mcp>=1.2.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-analytics-data>=0.18.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Raffaele86/seo-stack-mcp"
Repository = "https://github.com/Raffaele86/seo-stack-mcp"
Issues = "https://github.com/Raffaele86/seo-stack-mcp/issues"

[project.scripts]
seo-stack-mcp = "seo_stack_mcp.server:main"
